--- a/foody-api/Dockerfile
+++ b/foody-api/Dockerfile
@@ -60,6 +60,7 @@ RUN chmod u+x /tmp/do_we_need_xdebug.sh && /tmp/do_we_need_xdebug.sh
 # install composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 RUN chmod +x /usr/bin/composer
+RUN composer install
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
 # set working directory
