--- a/foody-api/docker-compose.yml
+++ b/foody-api/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - .:/var/www
+      - .:/var/www/html
     depends_on:
       - laravel
     networks:
