--- a/foody-api/docker-compose.yml
+++ b/foody-api/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       - MYSQL_ROOT_PASSWORD=secret
-      - MYSQL_DATABASE=laravel
+      - MYSQL_DATABASE=foody
     ports:
       - "33061:3306"
     volumes:
