--- a/foody-api/.env.example
+++ b/foody-api/.env.example
@@ -2,18 +2,18 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:z4LYeVlBsgz4YjsUSQ2Onrzot54gsgUJsKvnubd3s6s=
 APP_DEBUG=true
-APP_URL=http://localhost:8080
+APP_URL=http://foody-api.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=database
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=foody
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
