--- a/foody-api/Dockerfile
+++ b/foody-api/Dockerfile
@@ -74,4 +74,6 @@ RUN if [ "$BUILD_ARGUMENT_ENV" = "dev" ] || [ "$BUILD_ARGUMENT_ENV" = "test" ]; 
     else COMPOSER_MEMORY_LIMIT=-1 composer install --optimize-autoloader --no-interaction --no-progress --no-dev; \
     fi
 
+RUN composer install
+
 USER root
